finish weather; TODO -quotes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <title>New Tab</title>
     <script src="jquery-3.1.1.min.js"></script>
     <script src="test.js"></script>
-    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/weather.css">
+    <link rel="stylesheet" href="./css/notes.css">
+    <link rel="stylesheet" href="./css/quote.css">
   </head>
   <body>
     <section id="left">
-      <section id="weather"></section>
+      <a href='https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#safe=off&q=weather'>
+        <section id="weather"></section>
+      </a>
+      <section id="quote"></section>
     </section>
     <textarea id="notes" placeholder="Notes..."></textarea>
   </body>
