--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/weather.css">
     <link rel="stylesheet" href="./css/notes.css">
     <link rel="stylesheet" href="./css/quote.css">
+    <link rel="stylesheet" href="./css/news.css">
   </head>
   <body>
     <section id="left">
@@ -17,6 +18,14 @@
         <section id="weather"></section>
       </a>
       <section id="quote"></section>
+      <section id="news">
+        <div id="news-header">
+          <h1 id="npr">Top Headlines from&nbsp;</h1>
+          <a href='http://www.npr.org/' target='_blank'><img id="npr-logo" src='./images/npr_logo.jpg'/></a>
+        </div>
+        <div id="headlines"></div>
+      </section>
+      <section id="word"></section>
     </section>
     <textarea id="notes" placeholder="Notes..."></textarea>
   </body>
