--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>New Tab</title>
-    <script src="jquery-3.1.1.min.js"></script>
-    <script src="test.js"></script>
+    <script src="./js/jquery-3.1.1.min.js"></script>
+    <script src="./js/main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/weather.css">
